refactor: 폴더 조회 fetch join으로 변경